syntax = "proto3";

package auth;

option go_package = "delivery-proto/auth";


service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  int32 user_id = 2;
  string email = 3;
  string role = 4;
  string nombre_completo = 5;
  string telefono = 6;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string user_id = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  int32 user_id = 1;
  string email = 2;
  string rol = 3;
}
